# auto-translation-tools

./: .env.example  README.md  pyproject.toml
examples/: demo.py  japan_final.tsv  japan_translations.tsv  japan_translations_v2.tsv  japan_translations_v3.tsv  sample_english.txt
src/auto_translation_tools/: __init__.py  base.py  cli.py
src/auto_translation_tools/clients/: __init__.py  corenlp_client.py  dict_client.py
src/auto_translation_tools/tools/: __init__.py  gemini_caller.py  name_extractor.py
